--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;;
 }
 
@@ -33,7 +35,6 @@ header nav {
     background-color: #303C4B;
     color: white;
 }
-
 
 .profilePicture {
     animation: entrada 1.3s;
