--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,9 @@ footer .socialTag a {
 .card-img-top {
   width: 70%;
 }
-.card-img-top:hover {
+.card-img-top:hover:hover {
   animation: shake 0.3s;
-  opacity: 0.5;
 }
-
 @keyframes shake {
   0% {
     transform: rotate(5deg);
@@ -102,6 +100,10 @@ footer .socialTag a {
     opacity: 0.5;
   }
 }
+.card-img-top:hover:hover {
+  opacity: 0.5;
+}
+
 .imgPicture {
   width: 70%;
 }
@@ -143,8 +145,24 @@ iframe {
   height: 30px;
   margin: 0 50px 10px 50px;
 }
-.portfolioCard .linkContainer .linkIcon:hover {
+.portfolioCard .linkContainer .linkIcon:hover:hover {
   animation: shake 0.3s;
+}
+@keyframes shake {
+  0% {
+    transform: rotate(5deg);
+    opacity: 0.75;
+  }
+  50% {
+    transform: rotate(-5deg);
+    opacity: 0.6;
+  }
+  100% {
+    transform: rotate(0deg);
+    opacity: 0.5;
+  }
+}
+.portfolioCard .linkContainer .linkIcon:hover:hover {
   opacity: 0.5;
 }
 .portfolioCard .textDescription {
